css/src/columns.scss
.extra > .blog-post-body {
  p {
    margin: 0;
  }
  .row {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    flex-wrap: wrap;

    > [class*="col-"]:first-of-type {
      padding-left: 10px !important;
    }
    > [class*="col-"]:last-of-type {
      padding-right: 10px !important;
    }
    > [class*="col-"][class*="-3"],
    > [class*="col-"][class*="-4"] {
      padding-left: 10px;
      padding-right: 10px;
    }

    .compact {
      > [class*="col-"] {
        display: flex;
        flex-direction: column;
        padding: 22px 15px 22px 15px;
      }
      > .center {
        width: 195px;
      }
    }

    .fake {
      max-height: 0;

      [class*="col-"] {
        padding: 0;
      }
    }
  }
  > .row {
    > [class*="col-"] {
      display: flex;
      flex-direction: column;
      padding: 62px 45px 62px 45px;
    }
  }
}

.col-extra {
  justify-content: center;

  &:before {
    background-color: inherit;
    content: "";
    position: absolute;
    height: 100%;
    z-index: -1;
    width: 100vw;
  }
  &:first-of-type:before {
    right: 0;
  }
  &:last-of-type:before {
    left: 0;
  }
  &:only-of-type:before {
    width: 200vw;
    left: -50vw;
  }

  padding-bottom: 5px;
  padding-top: 10px;
}

.blog-list {
  padding: 20px;
}

